--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -1,4 +1,4 @@
-// Lux 4.3.1
+// Sketchy 4.3.1
 // Bootswatch
 
 //
@@ -8,117 +8,157 @@
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #f7f7f9 !default;
-$gray-300: #eceeef !default;
-$gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #919aa1 !default;
-$gray-700: #55595c !default;
-$gray-800: #343a40 !default;
-$gray-900: #1a1a1a !default;
+$gray-300: #dee2e6 !default;
+$gray-400: #ccc !default;
+$gray-500: #aaa !default;
+$gray-600: #868e96 !default;
+$gray-700: #555 !default;
+$gray-800: #333 !default;
+$gray-900: #212529 !default;
 $black:    #000 !default;
 
 $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #d9534f !default;
+$red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
-$yellow:  #f0ad4e !default;
-$green:   #4BBF73 !default;
+$yellow:  #ffc107 !default;
+$green:   #28a745 !default;
 $teal:    #20c997 !default;
-$cyan:    #1F9BCF !default;
+$cyan:    #17a2b8 !default;
 
-$primary:       $gray-900 !default;
-$secondary:     $white !default;
+$primary:       $gray-800 !default;
+$secondary:     $gray-700 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $white !default;
-$dark:          $gray-800 !default;
+$dark:          $gray-700 !default;
 
-$yiq-contrasted-threshold:  185 !default;
+$yiq-contrasted-threshold: 200 !default;
 
-// Options
+// Links
 
-$enable-rounded:                              false !default;
-
-// Body
-
-$body-color:                $gray-600 !default;
+$link-decoration:           underline !default;
 
 // Components
 
-// $border-radius:               0 !default;
-// $border-radius-lg:            0 !default;
-// $border-radius-sm:            0 !default;
+$border-width:                2px !default;
+
+$border-radius:          25px !default;
+$border-radius-lg:       35px !default;
+$border-radius-sm:       15px !default;
 
 // Fonts
 
-$font-family-sans-serif:      "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-sans-serif:      'Neucha', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
 
-$font-size-base:              0.875rem !default;
+$font-weight-base:            700 !default;
 
-$h1-font-size:                2rem !default;
-$h2-font-size:                1.75rem !default;
-$h3-font-size:                1.5rem !default;
-$h4-font-size:                1.25rem !default;
-$h5-font-size:                1rem !default;
-$h6-font-size:                0.75rem !default;
+$headings-font-family:   'Cabin Sketch', cursive !default;
 
-$headings-font-weight:        600 !default;
-$headings-color:              $gray-900 !default;
+$blockquote-small-color:      $gray-800 !default;
 
 // Tables
 
-$table-border-color:          rgba(0, 0, 0, 0.05) !default;
+$table-accent-bg:             $gray-400 !default;
+$table-hover-bg:              $white !default;
 
-// Buttons + Forms
-
-$input-btn-border-width:      0px !default;
-
-// Buttons
-
-$btn-line-height:             1.5rem !default;
-
-$input-btn-padding-y:         0.75rem !default;
-$input-btn-padding-x:         1.5rem !default;
-
-$input-btn-padding-y-sm:      .5rem !default;
-$input-btn-padding-x-sm:      1rem !default;
-
-$input-btn-padding-y-lg:      2rem !default;
-$input-btn-padding-x-lg:      2rem !default;
-
-$btn-font-weight:             600 !default;
+$table-border-width:          1px !default;
+$table-border-color:          $gray-800 !default;
 
 // Forms
 
-$input-line-height:                     1.5 !default;
+$input-border-color:                    $gray-800 !default;
 
-$input-bg:                              $gray-200 !default;
-$input-disabled-bg:                     $gray-300 !default;
+$input-focus-border-color:              $input-border-color !default;
 
-$input-group-addon-bg:                  $gray-300 !default;
+// Dropdowns
+
+$dropdown-border-color:             $gray-800 !default;
+$dropdown-divider-bg:               $gray-800 !default;
+
+$dropdown-link-hover-color:         $white !default;
+$dropdown-link-hover-bg:            $gray-800 !default;
+
+// Navs
+
+$nav-tabs-border-color:             $gray-800 !default;
+$nav-tabs-link-hover-border-color:  $gray-800 !default;
+$nav-tabs-link-active-color:        $gray-800 !default;
+$nav-tabs-link-active-border-color: $gray-800 !default;
 
 // Navbar
 
-$navbar-padding-y:                  1.5rem !default;
-
+$navbar-dark-color:                 $white !default;
 $navbar-dark-hover-color:           $white !default;
+$navbar-dark-toggler-border-color:  $white !default;
 
-$navbar-light-color:                rgba($black,.3) !default;
-$navbar-light-hover-color:          $gray-900 !default;
-$navbar-light-active-color:         $gray-900 !default;
+$navbar-light-color:                $gray-800 !default;
+$navbar-light-hover-color:          $gray-800 !default;
+$navbar-light-active-color:         $gray-800 !default;
+$navbar-light-toggler-border-color: $gray-800 !default;
 
 // Pagination
 
-$pagination-border-color:           transparent !default;
+$pagination-border-color:           $gray-800 !default;
 
-$pagination-hover-border-color:     $pagination-border-color !default;
+$pagination-hover-color:            $white !default;
+$pagination-hover-bg:               $gray-800 !default;
+$pagination-hover-border-color:     $gray-800 !default;
 
-$pagination-disabled-border-color:  $pagination-border-color !default;
+$pagination-disabled-color:         $gray-400 !default;
+$pagination-disabled-border-color:  $gray-800 !default;
+
+
+// Jumbotron
+
+$jumbotron-bg:                      transparent !default;
+
+// Cards
+
+$card-border-width:                 2px !default;
+$card-border-color:                 $gray-800 !default;
+
+// Popovers
+
+$popover-border-color:              $gray-800 !default;
+
+// Badges
+
+$badge-padding-y:                   0.5em !default;
+$badge-padding-x:                   1.2em !default;
+
+// Modals
+
+$modal-content-border-color:        $gray-800 !default;
+
+$modal-header-border-color:         $gray-800 !default;
+
+// Progress bars
+
+$progress-bg:                       $white !default;
+$progress-bar-bg:                   $gray-400 !default;
+
+// List group
+
+$list-group-border-color:           $gray-800 !default;
+
+$list-group-hover-bg:               $gray-300 !default;
+$list-group-active-color:           $white !default;
+$list-group-active-bg:              $gray-800 !default;
+
+$list-group-action-color:           $gray-800 !default;
 
 // Breadcrumbs
 
-$breadcrumb-bg:                     transparent !default;
+$breadcrumb-bg:                     $white !default;
+$breadcrumb-divider-color:          $gray-800 !default;
+$breadcrumb-active-color:           $gray-800 !default;
+
+// Close
+
+$close-color:                       $white !default;
+$close-text-shadow:                 none !default;
