--- a/scss/_bootswatch.scss
+++ b/scss/_bootswatch.scss
@@ -1,112 +1,193 @@
-// Litera 5.0.2
+// Zephyr 5.0.2
 // Bootswatch
+
+
+// Variables
+
+$web-font-path: "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" !default;
+@if $web-font-path {
+  @import url($web-font-path);
+}
 
 // Navbar
 
 .navbar {
   font-size: $font-size-sm;
+  font-weight: 500;
 
-  &.bg-dark {
-    background-color: $success !important;
+  .nav-item {
+    margin-left: .5rem;
+    margin-right: .5rem;
   }
 
-  &.bg-light {
-    background-color: $white !important;
-    border: 1px solid rgba(0, 0, 0, .1);
-
-    &.navbar-fixed-top {
-      border-width: 0 0 1px;
-    }
-
-    &.navbar-fixed-bottom {
-      border-width: 1px 0 0;
+  .navbar-nav {
+    .nav-link {
+      border-radius: $border-radius;
     }
   }
 }
 
-// Typography
+.navbar-dark {
+  .navbar-nav {
+    .nav-link {
+      &:hover {
+        background-color: rgba(255, 255, 255, .1);
+      }
 
-p {
-  font-family: $font-family-serif;
+      &.active {
+        background-color: rgba(0, 0, 0, .5);
+      }
+    }
+  }
 }
 
-blockquote {
-  font-style: italic;
+.navbar-light {
+  .navbar-nav {
+    .nav-link {
+      &:hover {
+        background-color: rgba(0, 0, 0, .03);
+      }
+
+      &.active {
+        background-color: rgba(0, 0, 0, .05);
+      }
+    }
+  }
 }
 
-footer {
-  font-size: $font-size-sm;
+// Buttons
+
+.btn-secondary,
+.btn-light,
+.btn-outline-secondary,
+.btn-outline-light {
+  color: $gray-900;
+
+  &:disabled,
+  &.disabled {
+    border: 1px solid shade-color($secondary, 10%);
+  }
 }
 
-.lead {
-  color: $gray-600;
-  font-family: $font-family-sans-serif;
+.btn-secondary,
+.btn-outline-secondary {
+  border-color: shade-color($secondary, 10%);
+
+  &:hover,
+  &:active {
+    background-color: shade-color($secondary, 10%);
+    border-color: shade-color($secondary, 10%);
+  }
+}
+
+.btn-light,
+.btn-outline-light {
+  border-color: shade-color($light, 10%);
+
+  &:hover,
+  &:active {
+    background-color: shade-color($light, 10%);
+    border-color: shade-color($light, 10%);
+  }
 }
 
 // Tables
 
-table,
 .table {
+  box-shadow: $box-shadow-lg;
   font-size: $font-size-sm;
+}
+
+thead th {
+  text-transform: uppercase;
+  font-size: $font-size-sm;
+}
+
+// Forms
+
+.input-group-text {
+  box-shadow: $box-shadow;
 }
 
 // Navs
 
-.nav,
-.breadcrumb,
-.pagination {
-  font-size: $font-size-sm;
+.nav-tabs {
+  font-weight: 500;
+
+  .nav-link {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-width: 0 0 1px;
+  }
+
+  .nav-link.active,
+  .nav-item.show .nav-link {
+    box-shadow: inset 0 -2px 0 $primary;
+  }
 }
 
-.dropdown-menu {
+.nav-pills {
+  font-weight: 500;
+}
+
+.pagination {
   font-size: $font-size-sm;
+  font-weight: 500;
+
+  .page-link {
+    box-shadow: $box-shadow;
+  }
+}
+
+.breadcrumb {
+  border: 1px solid $gray-300;
+  border-radius: $border-radius;
+  box-shadow: $box-shadow;
+  font-size: $font-size-sm;
+  font-weight: 500;
+
+  &-item {
+    padding: 1rem .5rem 1rem 0;
+  }
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+  padding-right: 1rem;
 }
 
 // Indicators
 
 .alert {
-  color: $white;
-  font-size: $font-size-sm;
-
-  &,
-  p {
-    font-family: $font-family-sans-serif;
-  }
-
-  a,
-  .alert-link {
-    color: $white;
-    font-weight: 400;
-    text-decoration: underline;
-  }
-
-  @each $color, $value in $theme-colors {
-    &-#{$color} {
-      @if $enable-gradients {
-        background: $value linear-gradient($value, mix($body-bg, $value, 15%)) repeat-x;
-      } @else {
-        background-color: $value;
-      }
-    }
-  }
-
-  &-light {
-    &,
-    a,
-    .alert-link {
-      color: $body-color;
-    }
+  .btn-close {
+    color: inherit;
   }
 }
 
 .badge {
+  &.bg-secondary,
   &.bg-light {
-    color: $dark;
+    color: $gray-900;
   }
 }
 
 // Containers
 
 .list-group {
-  font-size: $font-size-sm;
+  box-shadow: $box-shadow-lg;
+}
+
+.card {
+  box-shadow: $box-shadow-lg;
+
+  &-title {
+    color: inherit;
+  }
+}
+
+.modal-footer {
+  background-color: $gray-100;
+}
+
+.modal-content {
+  box-shadow: $box-shadow-lg;
 }
