--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
-// Litera 5.0.2
+// Zephyr 5.0.2
 // Bootswatch
 
-$theme: "litera" !default;
+$theme: "zephyr" !default;
 
 //
 // Color system
@@ -10,91 +10,154 @@ $theme: "litera" !default;
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
-$gray-300: #ddd !default;
+$gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
-$gray-600: #868e96 !default;
+$gray-600: #6c757d !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black:    #000 !default;
 
-$blue:    #4582ec !default;
+$blue:    #3459e6 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #d9534f !default;
-$orange:  #fd7e14 !default;
-$yellow:  #f0ad4e !default;
-$green:   #02b875 !default;
+$pink:    #d63384 !default;
+$red:     #da292e !default;
+$orange:  #f8765f !default;
+$yellow:  #f4bd61 !default;
+$green:   #2fb380 !default;
 $teal:    #20c997 !default;
-$cyan:    #17a2b8 !default;
+$cyan:    #287bb5 !default;
 
 $primary:       $blue !default;
-$secondary:     $gray-500 !default;
+$secondary:     $white !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
-$dark:          $gray-800 !default;
+$dark:          $gray-900 !default;
 
-$min-contrast-ratio:   1.85 !default;
+$min-contrast-ratio:   1.65 !default;
+
+$enable-shadows:              true !default;
 
 // Body
 
-$body-color:                $gray-800 !default;
+$body-color:                $gray-700 !default;
+
+$headings-color:              $gray-900 !default;
 
 // Fonts
 
-// stylelint-disable value-keyword-case
-$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$font-family-serif:           Georgia, Cambria, "Times New Roman", Times, serif !default;
-// stylelint-enable
+// stylelint-disable-next-line value-keyword-case
+$font-family-sans-serif:      Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
+$font-size-sm:                $font-size-base * .875 !default;
 
-$font-size-base:              1.1rem !default;
-$headings-font-weight:        700 !default;
+// Components
+
+$box-shadow:                  0 1px 2px rgba($black, .05) !default;
+$box-shadow-lg:               0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06) !default;
 
 // Tables
 
-$table-border-color:          rgba(0, 0, 0, .1) !default;
+$table-cell-padding-y:        1rem !default;
+$table-cell-padding-x:        1rem !default;
+$table-cell-padding-y-sm:     .5rem !default;
+$table-cell-padding-x-sm:     .5rem !default;
 
-$table-bg-scale:              0 !default;
+$table-th-font-weight:        500 !default;
+
+// Buttons + Forms
+
+$input-btn-padding-y:         .5rem !default;
+$input-btn-padding-x:         1rem !default;
+$input-btn-font-size:         $font-size-sm !default;
 
 // Buttons
 
-$input-btn-padding-y:         .5rem !default;
-$input-btn-padding-x:         1.1rem !default;
-$btn-font-family:             $font-family-sans-serif !default;
-$btn-font-size:               .875rem !default;
-$btn-font-size-sm:            .688rem !default;
-
-$btn-border-radius:           1.078em !default;
-$btn-border-radius-lg:        2.688em !default;
-$btn-border-radius-sm:        .844em !default;
+$btn-font-weight:             500 !default;
+$btn-box-shadow:              $box-shadow !default;
+$btn-focus-box-shadow:        $box-shadow !default;
+$btn-active-box-shadow:       $box-shadow !default;
 
 // Forms
 
-$input-border-color:                    rgba(0, 0, 0, .1) !default;
-$input-group-addon-bg:                  $gray-200 !default !default;
+$form-label-font-weight:                500 !default;
+
+$input-box-shadow:                      $box-shadow !default;
+
+$input-group-addon-bg:                  $gray-100 !default;
+
+// Navs
+
+$nav-link-color:                    $body-color !default;
+$nav-link-hover-color:              $body-color !default;
+
+$nav-tabs-border-radius:            0 !default;
+$nav-tabs-link-active-color:        $primary !default;
 
 // Navbar
 
-$navbar-dark-color:                 rgba($white, .6) !default;
+$navbar-padding-y:                  .85rem !default;
+
+$navbar-nav-link-padding-x:         .75rem !default;
+
+$navbar-dark-color:                 $white !default;
 $navbar-dark-hover-color:           $white !default;
-$navbar-light-hover-color:          $body-color !default;
-$navbar-light-active-color:         $body-color !default;
+$navbar-dark-active-color:          $white !default;
 
-// Tooltips
+$navbar-light-color:                $black !default;
+$navbar-light-hover-color:          $black !default;
+$navbar-light-active-color:         $black !default;
 
-$tooltip-font-size:                 11px !default;
+// Dropdowns
 
-// Badges
+$dropdown-font-size:                $font-size-sm !default;
+$dropdown-border-color:             $gray-300 !default;
+$dropdown-divider-bg:               $gray-200 !default;
 
-$badge-font-weight:                 400 !default;
-$badge-padding-y:                   .6em !default;
-$badge-padding-x:                   1.2em !default;
+$dropdown-link-hover-color:         $white !default;
+$dropdown-link-hover-bg:            $primary !default;
 
-// Alerts
+$dropdown-item-padding-y:           .5rem !default;
+$dropdown-item-padding-x:           1rem !default;
 
-$alert-border-width:                0 !default;
+// Pagination
+
+$pagination-padding-y:              .5rem !default;
+$pagination-padding-x:              1rem !default;
+
+$pagination-color:                  $gray-700 !default;
+
+$pagination-focus-color:            $pagination-color !default;
+
+$pagination-hover-color:            $pagination-color !default;
+$pagination-hover-bg:               $gray-100 !default;
+
+// Cards
+$card-spacer-x:                     1.5rem !default;
+$card-cap-padding-y:                1rem !default;
+$card-cap-padding-x:                1.5rem !default;
+
+// Toasts
+
+$toast-header-color:                $headings-color !default;
+
+// Modals
+
+$modal-content-border-color:        $gray-300 !default;
+$modal-header-border-width:         0 !default;
+
+// List group
+
+$list-group-item-padding-y:         1rem !default;
+$list-group-item-padding-x:         1.5rem !default;
+
+// Breadcrumbs
+
+$breadcrumb-padding-x:              1rem !default;
+
+$breadcrumb-divider:                quote(">") !default;
